--- a/IDE/Vdom/Vdom.mxml
+++ b/IDE/Vdom/Vdom.mxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:WindowedApplication
+<mx:WindowedApplication 
+	
+	showTitleBar="false"
+	showStatusBar="false"
+	showGripper="false"
 	
 	xmlns:mx="http://www.adobe.com/2006/mxml" 
 	xmlns:vdom="vdom.*"
@@ -13,10 +17,10 @@
 	xmlns:treeEditor="vdom.components.treeEditor.*"
 	
 	preinitialize="preinitalizeHandler();"
-	
+	applicationComplete="applicationCompleteHandler()"
 	layout="absolute"
 	verticalScrollPolicy="off"
-	>
+	xmlns:vdomTitleBar="vdom.core.vdomTitleBar.*">
 	
 	<mx:Script source="includes/Vdom.as"/>
 	
@@ -32,52 +36,42 @@
 	
 		<mx:Canvas id="main"  width="100%" height="100%" show="showMainHandler();">
 		
-			<mx:ApplicationControlBar
-				top="0" left="0" right="0" height="50" 
-				fillColors="#000000" dock="true" cornerRadius="0">
-				<mx:Spacer x="10" y="10" width="100%"/>
-				<!--<mx:ComboBox id="selectTestLang"
-					width="140"
-					dataProvider="{languageList.Language}"
-					labelField="@label"
-					fillColors="[#ffffff, #ffffff]" fillAlphas="[1.0, 0.59]"
-					change="changeLanguageHandler(event);"/> -->
-				<mx:Spacer x="10" y="10" width="100%"/>
-				<mx:Button label="Logout" click="viewstack.selectedChild=loginForm"/>
-			</mx:ApplicationControlBar>
+			<vdomTitleBar:VdomTitleBar  left="0" right="0"/>
 			
-			 
-			<controls:MainTabNavigator id="tabPanel"
-				top="60" left="10" right="10" bottom="10"
-				paddingBottom="10" paddingTop="10" paddingRight="10" paddingLeft="10" tabPaddingLeft="80">
-		
-	 			<modules:ApplicationManagment id="applicationManagmentModule" label="{resourceManager.getString('Application','main_title')}" />
-	 	
-	 			<modules:Editor label="{resourceManager.getString('Application','editor_title')}" 
-	 				width="100%"    height="100%" />
-				
-				<!--
-				<mx:Canvas id="multilinTab"
-					label="{resourceManager.getString('Application','multilingual_title')}"
-					width="100%" height="100%" />
-				
-				<mx:Canvas id="portalManTab"
-					label="{resourceManager.getString('Application','portal_managment_title')}"
-					width="100%" height="100%" />
-				
-				<mx:Canvas id="publishTab"
-					label="{resourceManager.getString('Application','publish_title')}"
-					width="100%" height="100%" />
-				
-				<mx:Canvas id="safeguardTab"
-					label="{resourceManager.getString('Application','safeguard_title')}"
-					width="100%" height="100%" />
+			<mx:Canvas backgroundColor="#ffffff" top="50" right="0" bottom="0" left="0" borderStyle="solid" borderColor="#000000">
+				<controls:MainTabNavigator id="tabPanel" tabHeight="25"
+					right="5" bottom="5"
+					tabPaddingLeft="80" left="5" borderStyle="none" top="5">
+			
+		 			<modules:ApplicationManagment id="applicationManagmentModule" label="{resourceManager.getString('Application','main_title')}" />
+		 	
+		 			<modules:Editor label="{resourceManager.getString('Application','editor_title')}" 
+		 				width="100%"    height="100%" />
 					
-				<mx:Canvas id="vdomTab"
-					label="{resourceManager.getString('Application','vdom_title')}"
-					width="100%" height="100%" />
-				-->
-			</controls:MainTabNavigator>
+					<!--
+					<mx:Canvas id="multilinTab"
+						label="{resourceManager.getString('Application','multilingual_title')}"
+						width="100%" height="100%" />
+					
+					<mx:Canvas id="portalManTab"
+						label="{resourceManager.getString('Application','portal_managment_title')}"
+						width="100%" height="100%" />
+					
+					<mx:Canvas id="publishTab"
+						label="{resourceManager.getString('Application','publish_title')}"
+						width="100%" height="100%" />
+					
+					<mx:Canvas id="safeguardTab"
+						label="{resourceManager.getString('Application','safeguard_title')}"
+						width="100%" height="100%" />
+						
+					<mx:Canvas id="vdomTab"
+						label="{resourceManager.getString('Application','vdom_title')}"
+						width="100%" height="100%" />
+					-->
+				</controls:MainTabNavigator>
+			</mx:Canvas>
+			<mx:Image x="10" y="10" width="62" height="62" source="assets/main/vdom_logo.png"/>
 		</mx:Canvas>
 	</mx:ViewStack>
 </mx:WindowedApplication>
