--- a/IDE/Vdom/vdom/modules/Editor.mxml
+++ b/IDE/Vdom/vdom/modules/Editor.mxml
@@ -21,9 +21,11 @@
 
 <mx:VBox id="components">
 	<controls:ControlPanel 
-		width="100%" height="90"
+		width="100%" height="104"
+		paddingTop="7" paddingBottom="7" paddingLeft="7" paddingRight="7"
+		dropShadowEnabled="true"
 		horizontalAlign="left" verticalAlign="middle"
-		horizontalGap="5">
+		horizontalGap="5" borderStyle="solid" borderColor="#000000">
 		
 		<controls:ActionButton styleName="editionButton"
 			label="{resourceManager.getString('Application','editor_edition')}"
@@ -60,7 +62,11 @@
 			labelPlacement="bottom"/>	
 	</controls:ControlPanel>
 	
-	<mx:ViewStack id="placeCanvas" width="100%" height="100%">
+	<mx:ViewStack id="placeCanvas" 
+		width="100%" height="100%"
+		styleName="vdomBackground"
+		dropShadowEnabled="true" borderStyle="solid"  borderColor="#000000"
+		paddingTop="7" paddingBottom="7" paddingLeft="7" paddingRight="7">
 	
 		<mx:Canvas id="initComponent" width="100%" height="100%">
 			<mx:Label text="Loading..." horizontalCenter="0" verticalCenter="0"/>
