--- a/IDE/Vdom/Vdom.mxml
+++ b/IDE/Vdom/Vdom.mxml
@@ -46,7 +46,7 @@
 		 			<modules:ApplicationManagment id="applicationManagmentModule" label="{resourceManager.getString('Application','main_title')}" />
 		 	
 		 			<modules:Editor label="{resourceManager.getString('Application','editor_title')}" 
-		 				width="100%"    height="100%" />
+		 				width="100%"    height="100%"  borderStyle="solid" borderColor="#000000"/>
 					
 					<!--
 					<mx:Canvas id="multilinTab"
