git-svn-id: http://svn.vdombox.ru/flextools/trunk@1506 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/analyse/Analyse.mxml
+++ b/IDE/Vdom/vdom/components/analyse/Analyse.mxml
@@ -8,8 +8,7 @@
 	
 	<mx:Script>
 		<![CDATA[
-			//import vdom.controls.databaseEditor.dbStructureEditor;
-			//import vdom.controls.databaseEditor.dbStructureEditor;
+			import vdom.controls.databaseEditor.dbStructureEditor;
 			import vdom.controls.resourceBrowser.ResourceBrowser;
 			import mx.managers.PopUpManager;
 			import mx.core.IFlexDisplayObject;
@@ -33,11 +32,11 @@
 			
 			
 			private function resourceBrowserLauncher():void {
-				PopUpManager.createPopUp(super, ResourceBrowser, true);
+				PopUpManager.createPopUp(this, ResourceBrowser, true);
 			}
 			
 			private function dbStructureEditorLauncher():void {
-				//PopUpManager.createPopUp(super, dbStructureEditor, true);
+				PopUpManager.createPopUp(this, dbStructureEditor, true);
 			}
 			
 		]]>
