git-svn-id: http://svn.vdombox.ru/flextools/trunk@1538 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowserButton.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowserButton.mxml
@@ -37,7 +37,7 @@
 			}
 	
 			private function completeHandler(event:ResourceBrowserEvent):void {
-				_value = "#Res(" + event.resourceName + ")";
+				_value = "#Res(" + event.resourceID + ")";
 				lbl.text = event.resourceName;
 			}
 	
