--- a/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowserButton.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowserButton.mxml
@@ -6,8 +6,8 @@
 			import mx.managers.PopUpManager;
 			import vdom.events.ResourceBrowserEvent;
 			
-			private var _value:String;
-			private var _title:String;
+			private var _value:String = "";
+			private var _title:String = "";
 			private var _rBrowserInstance:ResourceBrowser;
 	
 			private function initalizeHandler():void {
@@ -33,6 +33,7 @@
 				var resRegExp:RegExp = /^#Res\(([0-9]*)\)/;
 				if (_value.match(resRegExp) != null) {
 					_rBrowserInstance.selectedItemID = _value.match(resRegExp)[1];
+					trace("Resource browser: selected resource id is " + _rBrowserInstance.selectedItemID);
 				}
 			}
 	
