git-svn-id: http://svn.vdombox.ru/flextools/trunk@1553 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/edit/Edit.mxml
+++ b/IDE/Vdom/vdom/components/edit/Edit.mxml
@@ -66,8 +66,7 @@
 					
 			</containers:ClosablePanel>
 			-->
-			<objectsPanel:ObjectsPanel id="pageList" title="Pages" y="50" width="200" height="100%" 
-				dataProvider="{dataManager.listPages}" currentObject = "{dataManager.currentObject}"/> 					
+			<objectsPanel:ObjectsPanel id="pageList" title="Pages" y="50" width="200" height="100%" /> 					
 			
 		</mx:VBox>
 	</mx:HBox>
