--- a/IDE/Vdom/vdom/components/objectsPanel/ObjectsPanel.mxml
+++ b/IDE/Vdom/vdom/components/objectsPanel/ObjectsPanel.mxml
@@ -77,6 +77,7 @@
 		//trace('ObjPanel: '+dataManager.listPages);
 			    tree.percentHeight = 100;//width = 200;
 			    tree.percentWidth = 100;
+			    tree.itemRenderer = new ClassFactory(ItCanvas);
 				tree.showRoot = false; 
 				tree.iconField = "@icon"; 
 				tree.labelField = "@label";
