git-svn-id: http://svn.vdombox.ru/flextools/trunk@1557 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/objectsPanel/ObjectsPanel.mxml
+++ b/IDE/Vdom/vdom/components/objectsPanel/ObjectsPanel.mxml
@@ -54,10 +54,9 @@
 			    tree.percentWidth = 100;
 			    tree.itemRenderer = new ClassFactory(ItCanvas);
 				tree.showRoot = false; 
-				tree.iconField = "@icon"; 
-				tree.labelField = "@label";
+				//tree.iconField = "@icon"; 
 				
-			
+				tree.labelField = "@label";
 				tree.addEventListener(FlexEvent.UPDATE_COMPLETE, treeUpdateComletLister);
 				tree.addEventListener(Event.CHANGE, treeChangeLister);
 			    
