git-svn-id: http://svn.vdombox.ru/flextools/trunk@1558 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/objectsPanel/ObjectsPanel.mxml
+++ b/IDE/Vdom/vdom/components/objectsPanel/ObjectsPanel.mxml
@@ -83,7 +83,7 @@
 					
 					/// завести массивчик ID-шников.
 					
-					 xmlList.@sourceID = getSourceID(xmlLabel.@Type); 
+					 xmlList.@resourceID = getSourceID(xmlLabel.@Type); 
 					xmlList.@icon	= 'accordion_icon';
 					
 					xmlList.appendChild(findOjects(xmlLabel.Objects));
@@ -143,6 +143,7 @@
 					xmlTemp.@label 	= xmlLabel.@Name;
 					xmlTemp.@ID 	= xmlLabel.@ID;
 					xmlTemp.@Type 	= xmlLabel.@Type;
+					xmlTemp.@resourceID = getSourceID(xmlLabel.@Type); 
 					
 					xmlTemp.@icon	= 'drag_icon';
 				// проверяем есть ли еще обьекты в нутри
