--- a/IDE/Vdom/vdom/controls/databaseEditor/dbStructureEditor.mxml
+++ b/IDE/Vdom/vdom/controls/databaseEditor/dbStructureEditor.mxml
@@ -14,7 +14,7 @@
 		<mx:VBox height="100%" width="250" verticalGap="0">
 			<mx:Label text="Columns:" />
 			<mx:List id="__propList" width="100%" height="100%" dataProvider="{_propertiesProvider}"
-				change="{listChangeHandler();}" click="{listChangeHandler();}" />
+				change="{listChangeHandler();}" />
 		</mx:VBox>
 
 		<mx:VBox height="100%" width="100%" verticalGap="0">
