git-svn-id: http://svn.vdombox.ru/flextools/trunk@1572 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
@@ -53,7 +53,7 @@
 			
 			<mx:VRule height="100%" />
 			
-			<mx:Button height="24" label="Delete File..." />
+			<mx:Button height="24" label="Delete File..." enabled="false" />
 		</mx:HBox>
 		<!-- End of top panel -->
 		
