--- a/IDE/Vdom/vdom/controls/databaseEditor/dbStructureEditor.mxml
+++ b/IDE/Vdom/vdom/controls/databaseEditor/dbStructureEditor.mxml
@@ -13,16 +13,16 @@
 	<mx:HBox width="100%" height="100%" horizontalGap="5" verticalGap="0">
 		<mx:VBox height="100%" width="250" verticalGap="0">
 			<mx:Label text="Columns:" />
-			<mx:List id="__propList" width="100%" height="100%" dataProvider="{_propertiesProvider}"
+			<mx:List id="__propList" width="100%" height="100%" dataProvider="{_columnsProvider}"
 				change="{listChangeHandler();}" />
 		</mx:VBox>
 
 		<mx:VBox height="100%" width="100%" verticalGap="0">
 			<mx:Label text="Properties:" />
-			<mx:VBox borderStyle="solid" width="100%" height="100%" paddingTop="2" paddingRight="2">
+			<mx:VBox id="__propDetailsPanel" borderStyle="solid" width="100%" height="100%" paddingTop="2" paddingRight="2" enabled="false">
 				<mx:HBox width="100%" verticalAlign="middle">
 					<mx:Label text="Name:" width="100" />
-					<mx:TextInput id="__name" width="100%" borderStyle="solid" change="{__applyBtn.enabled = true;}" />
+					<mx:TextInput id="__name" width="100%" borderStyle="solid" change="{__applyBtn.enabled = true; __doneBtn.enabled = false;}" />
 				</mx:HBox>
 				<mx:HBox width="100%" verticalAlign="middle">
 					<mx:Label text="ID:" />
@@ -30,7 +30,7 @@
 				</mx:HBox>
 				<mx:HBox width="100%" verticalAlign="middle">
 					<mx:Label text="Type:" width="100" />
-					<mx:ComboBox id="__type" width="200" change="{__applyBtn.enabled = true;}">
+					<mx:ComboBox id="__type" width="200" change="{__applyBtn.enabled = true; __doneBtn.enabled = false;}">
 						<mx:ArrayCollection>
 							<mx:Object label="TEXT"		data="text"/>
 							<mx:Object label="INTEGER"	data="integer"/>
@@ -72,6 +72,6 @@
 	</mx:HBox>
 
 	<mx:HBox width="100%" height="24" horizontalAlign="right" verticalAlign="middle">
-		<mx:Button label="Done" click="{doneHandler();}" />
+		<mx:Button id="__doneBtn" label="Done" click="{doneHandler();}" />
 	</mx:HBox> 
 </mx:TitleWindow>
