--- a/IDE/Vdom/vdom/controls/databaseEditor/dbStructureEditor.mxml
+++ b/IDE/Vdom/vdom/controls/databaseEditor/dbStructureEditor.mxml
@@ -22,7 +22,7 @@
 			<mx:VBox id="__propDetailsPanel" borderStyle="solid" width="100%" height="100%" paddingTop="2" paddingRight="2" enabled="false">
 				<mx:HBox width="100%" verticalAlign="middle">
 					<mx:Label text="Name:" width="100" />
-					<mx:TextInput id="__name" width="100%" borderStyle="solid" change="{__applyBtn.enabled = true; __doneBtn.enabled = false;}" />
+					<mx:TextInput id="__name" width="100%" borderStyle="solid" change="{__applyBtn.enabled = true; controlsEnable(false);}" />
 				</mx:HBox>
 				<mx:HBox width="100%" verticalAlign="middle">
 					<mx:Label text="ID:" />
@@ -30,7 +30,7 @@
 				</mx:HBox>
 				<mx:HBox width="100%" verticalAlign="middle">
 					<mx:Label text="Type:" width="100" />
-					<mx:ComboBox id="__type" width="200" change="{__applyBtn.enabled = true; __doneBtn.enabled = false;}">
+					<mx:ComboBox id="__type" width="200" change="{__applyBtn.enabled = true; controlsEnable(false);}">
 						<mx:ArrayCollection>
 							<mx:Object label="TEXT"		data="text"/>
 							<mx:Object label="INTEGER"	data="integer"/>
@@ -67,8 +67,8 @@
 	</mx:HBox>
 
 	<mx:HBox width="100%" paddingTop="2">
-		<mx:Button label="Add" click="{addBtnHandler();}" />
-		<mx:Button label="Remove" click="{removeBtnHandler();}" />
+		<mx:Button id="__addBtn" label="Add" click="{addBtnHandler();}" />
+		<mx:Button id="__removeBtn" label="Remove" click="{removeBtnHandler();}" />
 	</mx:HBox>
 
 	<mx:HBox width="100%" height="24" horizontalAlign="right" verticalAlign="middle">
