git-svn-id: http://svn.vdombox.ru/flextools/trunk@1582 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/_src/theme/css/default.css
+++ b/IDE/Vdom/_src/theme/css/default.css
@@ -150,19 +150,20 @@ TypeAccordion {
 	headerStyleName: "typesHeaderStyle" ;
 }
 
-.typeVScrollBar {
-	themeColor: #ff0000;	
-}
-
 .typesHeaderStyle {
 	
 	color: #ffffff;
-	highlightAlphas: 0, 0;
+	highlightAlphas: .3, .3;
 	selectedFillColors: #d91107, #d91107;
 	textRollOverColor:#ffffff;
 	textSelectedColor:#ffffff; 
 	fillAlphas:1, 1;
 	fillColors:#d91107, #d91107;
+	textAlign: center;
+}
+
+.typeVScrollBar {
+	themeColor: #ff0000;	
 }
 
 ClosablePanel {
