--- a/IDE/Vdom/vdom/components/edit/containers/XMLPresentationEditor.mxml
+++ b/IDE/Vdom/vdom/components/edit/containers/XMLPresentationEditor.mxml
@@ -10,6 +10,15 @@
 >
 	<mx:Script source="includes/XMLPresentationEditor.as" />
 	
-	<mx:Button y="5" label="Save" height="20" x="10" cornerRadius="0"/>
-	<XMLPresentationClasses:XMLScriptEditor id="scriptEditor" bottom="10" right="10" left="10" top="30" borderStyle="solid" borderColor="#000000"/>
+	<mx:Button id="saveButton"
+		label="Save"
+		x="10" y="5" height="20"
+		cornerRadius="0"
+		
+		click="saveXMLScript()"
+	/>
+	<XMLPresentationClasses:XMLScriptEditor id="scriptEditor"
+		bottom="10" right="10" left="10" top="30"
+		borderStyle="solid" borderColor="#000000"
+	/>
 </mx:Canvas>
