--- a/IDE/Vdom/vdom/controls/multiLine/MultiLine.mxml
+++ b/IDE/Vdom/vdom/controls/multiLine/MultiLine.mxml
@@ -2,7 +2,7 @@
 <mx:HBox xmlns:mx="http://www.adobe.com/2006/mxml" height="20" width="100" horizontalAlign="right" initialize="initalizeHandler();" verticalAlign="middle">
 <mx:Script>
 <![CDATA[
-	import vdom.events.MultiLineWindowEvent;
+import vdom.events.MultiLineWindowEvent;
 
 private var _value:String;
 private var _title:String;
@@ -16,7 +16,7 @@ public function set title(attrValue:String):void {
 	
 	_title = attrValue;
 } 
-[Bindable]
+
 public function get value():String {
 	
 	return _value;
@@ -35,11 +35,11 @@ private function openWindow():void {
 private function completeHandler(event:MultiLineWindowEvent):void {
 	
 	_value = event.value;
-	lbl.text = _value;
+	//lbl.text = _value;
 }
 
 ]]>
 </mx:Script>
-	<mx:Label text="{value}" id="lbl" width="70"/>
+	<mx:Label id="lbl" width="70" text="Multiline"/>
 	<mx:Button label="..." height="20" cornerRadius="0" click="openWindow()" width="22" paddingLeft="2" paddingRight="2"/>
 </mx:HBox>
