corrected tree for show images
git-svn-id: http://svn.vdombox.ru/flextools/trunk@1603 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/treeEditor/AddTreeElementWindow.mxml
+++ b/IDE/Vdom/vdom/components/treeEditor/AddTreeElementWindow.mxml
@@ -178,10 +178,23 @@
 				fileManager.loadResource(dataManager.currentApplicationId,  resourceID, this);
 		}	
 		
+				
+		private var loader:Loader = new Loader();
 		public function set resource(data:Object):void
 		{
-				image.source = data.data;
+			loader.contentLoaderInfo.addEventListener(Event.COMPLETE, loadComplete);
+			loader.loadBytes(data.data);
+			//image.source = data.data;
 		}
+		
+		
+		private function loadComplete(evt:Event):void 
+		{
+   			loader.contentLoaderInfo.removeEventListener(Event.COMPLETE, loadComplete);		
+   			//image.width = loader.width;
+   			//image.height = loader.height;
+   			image.source = loader.content;
+   		}
 		
 		/***
 		 * 
